# KinectV2

./: CMakeLists.txt  README.md  main.cpp
Kinect2Grabber/: CMakeLists.txt  USB_Patch.txt
Kinect2Grabber/include/Kinect2Grabber/: Kinect2Grabber.h
Kinect2Grabber/lib/: libusb-1.0.la
Kinect2Grabber/src/: Kinect2Grabber.cpp
PCViewer/: CMakeLists.txt  Issues.txt
PCViewer/include/PCViewer/: ImgLoader.h  PCViewer.h
PCViewer/src/: ImgLoader.cpp  PCViewer.cpp
RGBD/: CMakeLists.txt  CMakeLists.txt~  RGBD.cpp  Readme
RGBD/Kinect2Grabber/src/: Kinect2Grabber.cpp  Kinect2Grabber.cpp~
alignCloud/: CMakeLists.txt  CMakeLists.txt~  alignCloud.cpp  grabber.cpp  orthoplane.cpp  transform_cloud.cpp
alignCloud/Kinect2Grabber/: CMakeLists.txt  CMakeLists.txt~
alignCloud/Kinect2Grabber/include/Kinect2Grabber/: Kinect2Grabber.h
grabber/: CMakeLists.txt  CMakeLists.txt~  grabber.cpp
grabber/Kinect2Grabber/: CMakeLists.txt  CMakeLists.txt~
grabber/Kinect2Grabber/include/Kinect2Grabber/: Kinect2Grabber.h
grabber/Kinect2Grabber/libusb/lib/: libusb-1.0.so.0.1.0
grabber/Kinect2Grabber/libusb/lib/pkgconfig/: libusb-1.0.pc
grabber/Kinect2Grabber/src/: Kinect2Grabber.cpp
utils/PCD/: CMakeLists.txt  pcd_viewer.cpp
utils/plyviewer/: CMakeLists.txt  plyparse.cpp
